Make a better use of JADX options